canary/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-canary-demo
  labels:
    app: rollouts-canary-demo
spec:
  replicas: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: rollouts-canary-demo
  template:
    metadata:
      labels:
        app: rollouts-canary-demo
    spec:
      containers:
        - name: rollouts-canary-demo
          image: "alexmt/rollouts-demo:latest"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
  strategy:
    canary: 
      steps:
      - setWeight: 20
      - pause:
          duration: 60
      - setWeight: 40
      - pause: {}
      canaryService: rollouts-canary-demo-preview-svc
      stableService: rollouts-canary-demo-svc
      trafficRouting:
        istio:
          virtualService:
            name: rollouts-canary-demo-vsvc
            routes:
              - primary
