canary/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rollouts-canary-demo-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - rollouts-canary-demo.local.1q77.com
    port:
      name: http
      number: 80
      protocol: HTTP
